<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewHello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textSize="35sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textViewSchool"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/school"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textViewLesson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lesson"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bPlay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/playText"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checked="true"
        android:text="@string/musicText"
        android:textStyle="bold" />
    
</LinearLayout>